force-app/main/default/objects/salesforce_contact__x/fields/homephone__c.field-meta.xml
<CustomField>
    <fullName>homephone__c</fullName>
    <description>homephone</description>
    <externalDeveloperName>homephone</externalDeveloperName>
    <label>homephone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>