force-app/main/default/objects/salesforce_contact__x/fields/mobilephone__c.field-meta.xml
<CustomField>
    <fullName>mobilephone__c</fullName>
    <description>mobilephone</description>
    <externalDeveloperName>mobilephone</externalDeveloperName>
    <label>mobilephone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>