force-app/main/default/objects/salesforce_contact__x/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <description>phone</description>
    <externalDeveloperName>phone</externalDeveloperName>
    <label>phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>